--- a/TestOS2/res/layout/activity_main.xml
+++ b/TestOS2/res/layout/activity_main.xml
@@ -19,7 +19,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView1"
-        android:layout_toRightOf="@+id/textView1"
         android:text="@string/button_service" />
+
+	    <Button
+	        android:id="@+id/btStop"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignBaseline="@+id/btStart"
+	        android:layout_alignBottom="@+id/btStart"
+	        android:layout_alignRight="@+id/button1"
+	        android:text="Stop" />
+
+	    <Button
+	        android:id="@+id/btStart"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_below="@+id/button1"
+	        android:layout_marginTop="32dp"
+	        android:layout_toRightOf="@+id/btStop"
+	        android:text="Start" />
+
+	    <Button
+	        android:id="@+id/btSwipe"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignBaseline="@+id/btStart"
+	        android:layout_alignBottom="@+id/btStart"
+	        android:layout_toRightOf="@+id/btStart"
+	        android:text="Glisser" />
 
 </RelativeLayout>
