--- a/TestOS2/res/layout/popup.xml
+++ b/TestOS2/res/layout/popup.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:columnCount="3"
-    android:orientation="vertical"
-    android:rowCount="2" >
-
-    <Button android:text="Clic" />
-
-    <Button android:text="Clic long" />
-
-    <Button android:text="Glisser" />
-
-
-
-
-</GridLayout>
+    android:orientation="vertical" >
+    <Button
+        android:id="@+id/but_clic"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Clic" />
+    <Button
+        android:id="@+id/but_clic_long"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Clic long" />
+    <Button
+        android:id="@+id/but_glisser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Glisser" />
+</LinearLayout>
