Corrections de bugs : -Nous empêchons la possibilité de démmarrer deux fois le service. -Long clic sur la dalle lors du défilement des lignes. -Dalle desactivée en attendant l'arrêt total du service.

--- a/TestOS2/res/xml/pref_os.xml
+++ b/TestOS2/res/xml/pref_os.xml
@@ -7,7 +7,7 @@
         List de type AutoSummaryListPreference,
         Permet une mise à jour automatique du summary
          -->
-	    <com.iut.oneswitch.application.AutoSummaryListPreference
+	    <com.iut.oneswitch.application.preferences.AutoSummaryListPreference
 	        android:defaultValue="3"
 	        android:entries="@array/pref_lign_size_entries"
 	        android:entryValues="@array/pref_lign_size_values"
