--- a/TestOS2/res/layout/activity_main.xml
+++ b/TestOS2/res/layout/activity_main.xml
@@ -15,35 +15,41 @@
         android:text="@string/hello_world" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/btTest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView1"
         android:text="@string/button_service" />
+		
+    <!-- A décommenter pour remettre les bouton start et stop
+	    <Button
+	        android:id="@+id/btStop"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_below="@+id/btTest"
+	        android:layout_marginTop="30dp"
+	        android:layout_toRightOf="@+id/btTest"
+	        android:text="@string/button_stop" />
 
 	    <Button
 	        android:id="@+id/btStart"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:layout_alignLeft="@+id/button1"
-	        android:layout_below="@+id/button1"
-	        android:layout_marginTop="36dp"
+	        android:layout_alignBaseline="@+id/btStop"
+	        android:layout_alignBottom="@+id/btStop"
+	        android:layout_alignLeft="@+id/btTest"
 	        android:text="@string/button_start" />
-
-	    <Button
-	        android:id="@+id/btSwipe"
+		-->
+		
+		<!-- A commenter pour supprimer le bouton on/off -->
+	    <ToggleButton
+	        android:id="@+id/toggleOnOff"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:layout_alignLeft="@+id/btStart"
-	        android:layout_below="@+id/btStart"
-	        android:text="@string/button_glisser" />
-
-	    <Button
-	        android:id="@+id/btStop"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_above="@+id/btSwipe"
-	        android:layout_toRightOf="@+id/btStart"
-	        android:text="@string/button_stop" />
+	        android:layout_alignBaseline="@+id/btTest"
+	        android:layout_alignBottom="@+id/btTest"
+	        android:layout_centerHorizontal="true"
+	        android:textOn="@string/toggle_on"
+	        android:textOff="@string/toggle_off" />
 
 </RelativeLayout>
