--- a/TestOS2/res/xml/pref_os.xml
+++ b/TestOS2/res/xml/pref_os.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
     
-    <PreferenceCategory android:title="General">
+    <PreferenceCategory android:title="Général">
 	    
         <!-- 
         List de type AutoSummaryListPreference,
@@ -13,7 +13,20 @@
 	        android:entryValues="@array/pref_lign_size_values"
 	        android:key="lign_size"
 	        android:title="@string/lign_size_title" />
+	    
+	    <com.iut.oneswitch.application.preferences.AutoSummaryListPreference
+	        android:defaultValue="2"
+	        android:entries="@array/pref_lign_speed_entries"
+	        android:entryValues="@array/pref_lign_speed_values"
+	        android:key="lign_speed"
+	        android:title="@string/lign_speed_title" />
 	
+	    <com.iut.oneswitch.application.preferences.AutoSummaryListPreference
+	        android:defaultValue="4"
+	        android:entries="@array/pref_iterations_entries"
+	        android:entryValues="@array/pref_iterations_values"
+	        android:key="iterations"
+	        android:title="@string/iterations_title" />
 	</PreferenceCategory>
 	
 </PreferenceScreen>
