initial commit new project

--- a/OneSwitch/res/layout/activity_one_switch.xml
+++ b/OneSwitch/res/layout/activity_one_switch.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.oneswitch.appliction.OneSwitchActivity" >
+    tools:context=".MainActivity" >
 
     <Button
         android:id="@+id/button1"
@@ -15,7 +15,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:text="Start"
+        android:text="Start Touch Detection"
         android:onClick="buttonClicked" />
 
 </RelativeLayout>
