--- a/OneSwitch/res/layout/popup.xml
+++ b/OneSwitch/res/layout/popup.xml
@@ -1,21 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical" >
-    <Button
-        android:id="@+id/but_clic"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Clic" />
-    <Button
-        android:id="@+id/but_clic_long"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Clic long" />
+
+    <LinearLayout
+        android:layout_width="166dp"
+        android:layout_height="wrap_content" >
+
+        <Button
+            android:id="@+id/but_clic"
+            android:layout_width="82dp"
+            android:layout_height="82dp"
+            android:minWidth="48dp"
+            android:text="@string/clic_button" />
+
+        <Button
+            android:id="@+id/but_clic_long"
+            android:layout_width="82dp"
+            android:layout_height="82dp"
+            android:maxWidth="82dp"
+            android:minHeight="82dip"
+            android:minWidth="82dip"
+            android:text="Long" />
+
+    </LinearLayout>
+
     <Button
         android:id="@+id/but_glisser"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Glisser" />
+        android:layout_width="82dp"
+        android:layout_height="82dp"
+        android:text="@string/glisser_button" />
+
 </LinearLayout>
