fix bugs Démmare au démmarage du téléphone

--- a/OneSwitch/res/layout/activity_one_switch.xml
+++ b/OneSwitch/res/layout/activity_one_switch.xml
@@ -15,7 +15,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:text="Start Touch Detection"
-        android:onClick="buttonClicked" />
+        android:text="Start Service" />
 
 </RelativeLayout>
