Ajout notification et mise à jour Switch On/Off

--- a/OneSwitch/res/xml/pref_os.xml
+++ b/OneSwitch/res/xml/pref_os.xml
@@ -19,7 +19,7 @@
         
     </PreferenceCategory>
         
-    <PreferenceCategory android:title="@string/pref_header_service">  
+    <PreferenceCategory android:title="@string/pref_header_lign">  
         
 	    <!-- Size -->
 	    <iut.oneswitch.preference.AutoSummaryListPreference
