--- a/OneSwitch/res/xml/pref_os.xml
+++ b/OneSwitch/res/xml/pref_os.xml
@@ -19,7 +19,7 @@
         
     </PreferenceCategory>
         
-    <PreferenceCategory android:title="@string/pref_header_service">  
+    <PreferenceCategory android:title="@string/pref_header_defilement">  
         
 	    <!-- Size -->
 	    <iut.oneswitch.preference.AutoSummaryListPreference
@@ -46,4 +46,28 @@
 	        android:defaultValue="3" />
 	</PreferenceCategory>
 	
+    <!-- action clic long -->
+        <iut.oneswitch.preference.AutoSummaryListPreference
+            android:defaultValue="2"
+            android:entries="@array/pref_longPressAction_entries"
+            android:entryValues="@array/pref_longPressAction_values"
+            android:key="longPressAction"
+            android:title="@string/longPressAction_title" />
+
+
+            <!-- delai demarrage defilement -->
+            <iut.oneswitch.preference.AutoSummaryListPreference
+                android:defaultValue="50"
+                android:entries="@array/pref_startDelay_entries"
+                android:entryValues="@array/pref_startDelay_values"
+                android:key="startDelay"
+                android:title="@string/startDelay_title" />
+
+            <!-- delai anti rebonds -->
+            <iut.oneswitch.preference.AutoSummaryListPreference
+                android:defaultValue="200"
+                android:entries="@array/pref_reboundDelay_entries"
+                android:entryValues="@array/pref_reboundDelay_values"
+                android:key="reboundDelay"
+                android:title="@string/reboundDelay_title" />
 </PreferenceScreen>
