--- a/OneSwitch/res/layout/shortcutlayout.xml
+++ b/OneSwitch/res/layout/shortcutlayout.xml
@@ -18,6 +18,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/back_button" />
+    
+    <Button
+        android:id="@+id/but_taches"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/taches_button" />
 
     <Button
         android:id="@+id/but_home"
