--- a/OneSwitch/res/xml/pref_os.xml
+++ b/OneSwitch/res/xml/pref_os.xml
@@ -15,6 +15,7 @@
             android:summary="@string/switch_auto_summary"
             android:title="@string/title_switch_auto" />
     </PreferenceCategory>
+    
     <PreferenceCategory android:title="@string/pref_header_defilement" >
 
         <!-- Size -->
@@ -41,30 +42,30 @@
             android:key="iterations"
             android:title="@string/iterations_title" />
 
-        <!-- action clic long -->
+        <!-- Action clic long -->
         <iut.oneswitch.preference.AutoSummaryListPreference
             android:defaultValue="2"
             android:entries="@array/pref_longPressAction_entries"
             android:entryValues="@array/pref_longPressAction_values"
             android:key="longPressAction"
             android:title="@string/longPressAction_title" />
+        
+        <!-- Delai avant défilement -->
+        <iut.oneswitch.preference.AutoSummaryListPreference
+            android:defaultValue="1000"
+            android:entries="@array/pref_startDelay_entries"
+            android:entryValues="@array/pref_startDelay_values"
+            android:key="delay"
+            android:title="@string/startDelay_title"/>
 
-
-            <!-- delai demarrage defilement -->
-            <iut.oneswitch.preference.AutoSummaryListPreference
-                android:defaultValue="0"
-                android:entries="@array/pref_startDelay_entries"
-                android:entryValues="@array/pref_startDelay_values"
-                android:key="startDelay"
-                android:title="@string/startDelay_title" />
-
-            <!-- delai anti rebonds -->
-            <iut.oneswitch.preference.AutoSummaryListPreference
-                android:defaultValue="200"
-                android:entries="@array/pref_reboundDelay_entries"
-                android:entryValues="@array/pref_reboundDelay_values"
-                android:key="reboundDelay"
-                android:title="@string/reboundDelay_title" />
+        <!-- Delai anti rebonds -->
+        <iut.oneswitch.preference.AutoSummaryListPreference
+            android:defaultValue="200"
+            android:entries="@array/pref_reboundDelay_entries"
+            android:entryValues="@array/pref_reboundDelay_values"
+            android:key="reboundDelay"
+            android:title="@string/reboundDelay_title" />
+        
     </PreferenceCategory>
 
 </PreferenceScreen>
