--- a/OneSwitch/res/xml/pref_os.xml
+++ b/OneSwitch/res/xml/pref_os.xml
@@ -87,5 +87,9 @@
             android:title="@string/reboundDelay_title" />
 
     </PreferenceCategory>
+    
+    <Preference android:key="reset"
+        android:title="Remise à zéro"/>
+        
 
 </PreferenceScreen>
