--- a/OneSwitch/res/values/string_popup.xml
+++ b/OneSwitch/res/values/string_popup.xml
@@ -14,8 +14,7 @@
 	<string name="home_button">Accueil</string>
 	<string name="taches_button">Multitaches</string>
 	<string name="menu_button">Menu</string>
-	<string name="volup_button">Volume +</string>
-	<string name="voldown_button">Volume -</string>
+	<string name="volup_button">Volume</string>
 	<string name="lock_button">Verrouiller</string>
 	<string name="shutdown_button">Eteindre</string>
 </resources>
